# serializer version: 1
# name: test_select[select.ceiling_hood_fan_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'boost',
        'breeze',
        'high',
        'low',
        'medium',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.ceiling_hood_fan_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan speed',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hood_fan_speed',
    'unique_id': '999008105_00:99010299-443E074B7A6E_hood_fan_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.ceiling_hood_fan_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ceiling Hood Fan speed',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'boost',
        'breeze',
        'high',
        'low',
        'medium',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.ceiling_hood_fan_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_select[select.dehumidifier_fan_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'high',
        'low',
        'medium',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.dehumidifier_fan_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan speed',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dehumidifier_fan_speed',
    'unique_id': '950133061_00:98802845-443E07021EF3_dehumidifier_fan_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.dehumidifier_fan_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dehumidifier Fan speed',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'high',
        'low',
        'medium',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.dehumidifier_fan_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'high',
  })
# ---
# name: test_select[select.dish_washer_program-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '1_hour',
        '30_min',
        'auto',
        'dish_normal',
        'eco',
        'intensive',
        'machine_clean',
        'prerinse',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.dish_washer_program',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Program',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Program',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'care_program',
    'unique_id': '911438421_03:33109002-443E07338CF5_program',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.dish_washer_program-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dish Washer Program',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '1_hour',
        '30_min',
        'auto',
        'dish_normal',
        'eco',
        'intensive',
        'machine_clean',
        'prerinse',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.dish_washer_program',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'dish_normal',
  })
# ---
# name: test_select[select.dryer_program-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'bed_linen_xl',
        'cotton',
        'cotton_eco',
        'delicates',
        'denim',
        'drying_rack',
        'duvet',
        'mixed',
        'outdoor',
        'refresh',
        'silk',
        'sports',
        'synthetics',
        'wool',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.dryer_program',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Program',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Program',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'care_program',
    'unique_id': '999120000_00:74852244-443E0704101F_program',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.dryer_program-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dryer Program',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'bed_linen_xl',
        'cotton',
        'cotton_eco',
        'delicates',
        'denim',
        'drying_rack',
        'duvet',
        'mixed',
        'outdoor',
        'refresh',
        'silk',
        'sports',
        'synthetics',
        'wool',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.dryer_program',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'silk',
  })
# ---
# name: test_select[select.fenix_program-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'air_sous_vide',
        'bottom',
        'bread_baking',
        'cheese_bread',
        'chips',
        'conventional_cooking',
        'dehydrate',
        'dough_proofing',
        'frozen_foods',
        'frozen_french_fries',
        'grill',
        'keep_warm',
        'manual',
        'meat_and_fish',
        'nuggets_and_chicken_wings',
        'pasta_and_pizza',
        'pies',
        'pizza',
        'rustic_potatoes',
        'steam_bake',
        'steam_regenerating',
        'true_fan',
        'turbo_grill',
        'vegetables',
        'water_bath',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.fenix_program',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Program',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Program',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'oven_program',
    'unique_id': '900412569_00:43319382-443E0748CCD4_program',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.fenix_program-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fenix Program',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'air_sous_vide',
        'bottom',
        'bread_baking',
        'cheese_bread',
        'chips',
        'conventional_cooking',
        'dehydrate',
        'dough_proofing',
        'frozen_foods',
        'frozen_french_fries',
        'grill',
        'keep_warm',
        'manual',
        'meat_and_fish',
        'nuggets_and_chicken_wings',
        'pasta_and_pizza',
        'pies',
        'pizza',
        'rustic_potatoes',
        'steam_bake',
        'steam_regenerating',
        'true_fan',
        'turbo_grill',
        'vegetables',
        'water_bath',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.fenix_program',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_select[select.peacock_hob_fan_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'boost',
        'breeze',
        'high',
        'low',
        'medium',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.peacock_hob_fan_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan speed',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hood_fan_speed',
    'unique_id': '999008120_00:99907833-443E073D986E_hood_fan_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.peacock_hob_fan_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peacock hob Fan speed',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'boost',
        'breeze',
        'high',
        'low',
        'medium',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.peacock_hob_fan_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_select[select.peacock_hob_hood_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'auto',
        'manual',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.peacock_hob_hood_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hood state',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hood state',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hood_state',
    'unique_id': '999008120_00:99907833-443E073D986E_hood_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.peacock_hob_hood_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peacock hob Hood state',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'auto',
        'manual',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.peacock_hob_hood_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'manual',
  })
# ---
# name: test_select[select.pux_pizza_oven_program-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'augratin',
        'bottom',
        'bread_baking',
        'conventional_cooking',
        'defrost',
        'dehydrate',
        'dough_proofing',
        'frozen_foods',
        'grill',
        'hot_air_bottom',
        'keep_warm',
        'moist_fan_bake',
        'plate_warming',
        'preserving',
        'pyro_clean_intense',
        'pyro_clean_normal',
        'pyro_clean_quick',
        'true_fan',
        'turbo_grill',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.pux_pizza_oven_program',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Program',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Program',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'oven_program',
    'unique_id': '949288049_00:11112225-443E076A37D6_program',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.pux_pizza_oven_program-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'PUX pizza oven Program',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'augratin',
        'bottom',
        'bread_baking',
        'conventional_cooking',
        'defrost',
        'dehydrate',
        'dough_proofing',
        'frozen_foods',
        'grill',
        'hot_air_bottom',
        'keep_warm',
        'moist_fan_bake',
        'plate_warming',
        'preserving',
        'pyro_clean_intense',
        'pyro_clean_normal',
        'pyro_clean_quick',
        'true_fan',
        'turbo_grill',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.pux_pizza_oven_program',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'true_fan',
  })
# ---
# name: test_select[select.supex_oven_upper_cavity_program-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'bake',
        'broil',
        'descaling',
        'drying',
        'full_steam',
        'hot_air_bottom',
        'hot_air_top',
        'hot_air_top_bottom',
        'moist_fan_bake',
        'rinsing',
        'steam_clean',
        'steam_clean_plus',
        'steam_high',
        'steam_low',
        'steam_medium',
        'steamify',
        'top_bottom',
        'true_fan',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.supex_oven_upper_cavity_program',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Upper cavity program',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Upper cavity program',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'upperoven_oven_program',
    'unique_id': '944035064_00:27032025-443E073D97B2_upperoven_program',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.supex_oven_upper_cavity_program-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Supex oven Upper cavity program',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'bake',
        'broil',
        'descaling',
        'drying',
        'full_steam',
        'hot_air_bottom',
        'hot_air_top',
        'hot_air_top_bottom',
        'moist_fan_bake',
        'rinsing',
        'steam_clean',
        'steam_clean_plus',
        'steam_high',
        'steam_low',
        'steam_medium',
        'steamify',
        'top_bottom',
        'true_fan',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.supex_oven_upper_cavity_program',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'steamify',
  })
# ---
# name: test_select[select.washer_dryer_program-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '1_item',
        'anti_allergy_vapor',
        'baby_clothes',
        'bed_linen_xl',
        'business_shirt',
        'cotton',
        'delicates',
        'denim',
        'down_jackets',
        'duvet',
        'easy_iron',
        'eco_40_60_degrees',
        'hygiene',
        'linen',
        'machine_clean',
        'mix_load',
        'outdoor',
        'pet_hair',
        'quick_20_wash_dry_60',
        'rinse',
        'running_shoes',
        'skiing_gear',
        'soccer_rugby',
        'spin_drain',
        'sports',
        'steam_cashmere',
        'synthetics',
        'towels',
        'training_gear',
        'wool_handwash',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.washer_dryer_program',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Program',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Program',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'care_program',
    'unique_id': '999007132_50:23300001-443E0733A070_program',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.washer_dryer_program-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washer Dryer Program',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '1_item',
        'anti_allergy_vapor',
        'baby_clothes',
        'bed_linen_xl',
        'business_shirt',
        'cotton',
        'delicates',
        'denim',
        'down_jackets',
        'duvet',
        'easy_iron',
        'eco_40_60_degrees',
        'hygiene',
        'linen',
        'machine_clean',
        'mix_load',
        'outdoor',
        'pet_hair',
        'quick_20_wash_dry_60',
        'rinse',
        'running_shoes',
        'skiing_gear',
        'soccer_rugby',
        'spin_drain',
        'sports',
        'steam_cashmere',
        'synthetics',
        'towels',
        'training_gear',
        'wool_handwash',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.washer_dryer_program',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'eco_40_60_degrees',
  })
# ---
# name: test_select[select.washer_dryer_spin_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '0_rpm',
        '1000_rpm',
        '1200_rpm',
        '1400_rpm',
        '1600_rpm',
        '400_rpm',
        '600_rpm',
        '800_rpm',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.washer_dryer_spin_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Spin speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Spin speed',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'spin_speed',
    'unique_id': '999007132_50:23300001-443E0733A070_spin_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.washer_dryer_spin_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washer Dryer Spin speed',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '0_rpm',
        '1000_rpm',
        '1200_rpm',
        '1400_rpm',
        '1600_rpm',
        '400_rpm',
        '600_rpm',
        '800_rpm',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.washer_dryer_spin_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1600_rpm',
  })
# ---
# name: test_select[select.washer_dryer_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '20_celsius',
        '30_celsius',
        '40_celsius',
        '50_celsius',
        '60_celsius',
        '95_celsius',
        'cold',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.washer_dryer_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature',
    'unique_id': '999007132_50:23300001-443E0733A070_temperature',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.washer_dryer_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washer Dryer Temperature',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '20_celsius',
        '30_celsius',
        '40_celsius',
        '50_celsius',
        '60_celsius',
        '95_celsius',
        'cold',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.washer_dryer_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '40_celsius',
  })
# ---
# name: test_select[select.washing_machine_program-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '1_item',
        '20_min',
        'anti_allergy_vapor',
        'baby_clothes',
        'bed_linen_xl',
        'business_shirt',
        'cotton',
        'curtains',
        'delicates',
        'denim',
        'down_jackets',
        'duvet',
        'easy_iron',
        'eco_40_60_degrees',
        'hygiene',
        'linen',
        'machine_clean',
        'outdoor',
        'pet_hair',
        'pillow',
        'power_clean_59min',
        'rinse',
        'running_shoes',
        'silk',
        'skiing_gear',
        'soccer_rugby',
        'spin_drain',
        'sports',
        'steam_cashmere',
        'steam_refresh',
        'synthetics',
        'towels',
        'training_gear',
        'wool_silk',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.washing_machine_program',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Program',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Program',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'care_program',
    'unique_id': '999007091_50:22002306-443E071A93FA_program',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.washing_machine_program-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washing Machine Program',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '1_item',
        '20_min',
        'anti_allergy_vapor',
        'baby_clothes',
        'bed_linen_xl',
        'business_shirt',
        'cotton',
        'curtains',
        'delicates',
        'denim',
        'down_jackets',
        'duvet',
        'easy_iron',
        'eco_40_60_degrees',
        'hygiene',
        'linen',
        'machine_clean',
        'outdoor',
        'pet_hair',
        'pillow',
        'power_clean_59min',
        'rinse',
        'running_shoes',
        'silk',
        'skiing_gear',
        'soccer_rugby',
        'spin_drain',
        'sports',
        'steam_cashmere',
        'steam_refresh',
        'synthetics',
        'towels',
        'training_gear',
        'wool_silk',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.washing_machine_program',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'synthetics',
  })
# ---
# name: test_select[select.washing_machine_spin_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '0_rpm',
        '1000_rpm',
        '1200_rpm',
        '1400_rpm',
        '400_rpm',
        '600_rpm',
        '800_rpm',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.washing_machine_spin_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Spin speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Spin speed',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'spin_speed',
    'unique_id': '999007091_50:22002306-443E071A93FA_spin_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.washing_machine_spin_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washing Machine Spin speed',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '0_rpm',
        '1000_rpm',
        '1200_rpm',
        '1400_rpm',
        '400_rpm',
        '600_rpm',
        '800_rpm',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.washing_machine_spin_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1200_rpm',
  })
# ---
# name: test_select[select.washing_machine_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '20_celsius',
        '30_celsius',
        '40_celsius',
        '50_celsius',
        '60_celsius',
        '95_celsius',
        'cold',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.washing_machine_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature',
    'unique_id': '999007091_50:22002306-443E071A93FA_temperature',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.washing_machine_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washing Machine Temperature',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        '20_celsius',
        '30_celsius',
        '40_celsius',
        '50_celsius',
        '60_celsius',
        '95_celsius',
        'cold',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.washing_machine_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '40_celsius',
  })
# ---
